feat: Upgrade to Spring Boot 3.3.13: Changes made by org.openrewrite.maven:rewrite-maven-plugin (recipe: org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3) and verified. Dependencies management is improved. Changes in Java classes are checked and corrected (except contract-tests). Some code check warns are fixed.